Fix swagger problem
