# storage/api-docs/api-docs.json
@@ -59,6 +59,14 @@
                                     },
                                     "language": {
                                         "type": "string"
+                                    },
+                                    "avatar": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    },
+                                    "banner": {
+                                        "type": "string",
+                                        "format": "binary"
                                     }
                                 },
                                 "type": "object"
@@ -344,6 +352,10 @@
                                     "enable_tooltip": {
                                         "type": "boolean",
                                         "example": true
+                                    },
+                                    "banner": {
+                                        "type": "string",
+                                        "format": "binary"
                                     }
                                 },
                                 "type": "object"
@@ -487,6 +499,10 @@
                                     "enable_tooltip": {
                                         "type": "boolean",
                                         "example": true
+                                    },
+                                    "banner": {
+                                        "type": "string",
+                                        "format": "binary"
                                     }
                                 },
                                 "type": "object"
@@ -2294,6 +2310,14 @@
                                     "created_by": {
                                         "type": "int",
                                         "example": 1
+                                    },
+                                    "banner": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    },
+                                    "image": {
+                                        "type": "string",
+                                        "format": "binary"
                                     }
                                 },
                                 "type": "object"
@@ -2376,6 +2400,14 @@
                                     "created_by": {
                                         "type": "int",
                                         "example": 1
+                                    },
+                                    "banner": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    },
+                                    "image": {
+                                        "type": "string",
+                                        "format": "binary"
                                     }
                                 },
                                 "type": "object"
@@ -2519,6 +2551,14 @@
                                     "created_by": {
                                         "type": "int",
                                         "example": "1"
+                                    },
+                                    "banner": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    },
+                                    "image": {
+                                        "type": "string",
+                                        "format": "binary"
                                     }
                                 },
                                 "type": "object"
@@ -2606,6 +2646,14 @@
                                     "created_by": {
                                         "type": "int",
                                         "example": "1"
+                                    },
+                                    "banner": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    },
+                                    "image": {
+                                        "type": "string",
+                                        "format": "binary"
                                     }
                                 },
                                 "type": "object"
@@ -2774,7 +2822,15 @@
                                         "type": "integer",
                                         "example": 1
                                     },
-                                    "image": {
+                                    "featured_image": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    },
+                                    "short_resolation_image": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    },
+                                    "images": {
                                         "type": "array",
                                         "items": {
                                             "type": "string",
@@ -2892,7 +2948,15 @@
                                         "type": "integer",
                                         "example": 1
                                     },
-                                    "image": {
+                                    "featured_image": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    },
+                                    "short_resolation_image": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    },
+                                    "images": {
                                         "type": "array",
                                         "items": {
                                             "type": "string",
@@ -3483,10 +3547,6 @@
                                         "type": "string",
                                         "example": "Boishakhi Card"
                                     },
-                                    "image": {
-                                        "type": "string",
-                                        "example": "filename"
-                                    },
                                     "price_value_for": {
                                         "type": "string",
                                         "example": "5000"
@@ -3506,6 +3566,10 @@
                                     "created_by": {
                                         "type": "integer",
                                         "example": 1
+                                    },
+                                    "image": {
+                                        "type": "string",
+                                        "format": "binary"
                                     }
                                 },
                                 "type": "object"
@@ -3578,10 +3642,6 @@
                                         "type": "string",
                                         "example": "Boishakhi Card"
                                     },
-                                    "image": {
-                                        "type": "string",
-                                        "example": "filename"
-                                    },
                                     "price_value_for": {
                                         "type": "string",
                                         "example": "5000"
@@ -3609,6 +3669,10 @@
                                     "deleted_by": {
                                         "type": "integer",
                                         "example": 2
+                                    },
+                                    "image": {
+                                        "type": "string",
+                                        "format": "binary"
                                     }
                                 },
                                 "type": "object"
@@ -4112,9 +4176,9 @@
                 "tags": [
                     "Gift Cards"
                 ],
-                "summary": "Purchase New Gift Card / Voucher",
-                "description": "Purchase New Gift Card / Voucher",
-                "operationId": "store",
+                "summary": "Purchase New Gift Card",
+                "description": "Purchase New Gift Card",
+                "operationId": "giftCardStore",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -4146,7 +4210,57 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Purchase New Gift Card / Voucher"
+                        "description": "Purchase New Gift Card "
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                }
+            }
+        },
+        "/api/v1/vouchers/transactions": {
+            "post": {
+                "tags": [
+                    "Vouchers"
+                ],
+                "summary": "Purchase New Voucher",
+                "description": "Purchase New Voucher",
+                "operationId": "voucherStore",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "business_id": {
+                                        "type": "integer"
+                                    },
+                                    "user_id": {
+                                        "type": "integer"
+                                    },
+                                    "voucher_id": {
+                                        "type": "integer"
+                                    },
+                                    "order_quantity": {
+                                        "type": "string"
+                                    },
+                                    "paid_total": {
+                                        "type": "string"
+                                    },
+                                    "payment_status": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Purchase New Voucher "
                     },
                     "400": {
                         "description": "Bad request"
@@ -4160,10 +4274,10 @@
         "/api/v1/giftcards/user/{id}": {
             "get": {
                 "tags": [
-                    "Gift Card"
+                    "Gift Cards"
                 ],
-                "summary": "Get Gift Card / Voucher Payment Status By Customer ID",
-                "description": "Get Gift Card / Voucher Payment Status By Customer ID",
+                "summary": "Get Gift Card By Customer ID",
+                "description": "Get Gift Card By Customer ID",
                 "operationId": "getGiftCardByCustomer",
                 "parameters": [
                     {
@@ -4178,7 +4292,44 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Get Gift Card / Voucher Payment Status By Customer ID"
+                        "description": "Get Gift Card By Customer ID"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/vouchers/user/{id}": {
+            "get": {
+                "tags": [
+                    "Vocuhers"
+                ],
+                "summary": "Get Voucher By Customer ID",
+                "description": "Get Voucher By Customer ID",
+                "operationId": "getVoucherByCustomer",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id, eg; 1",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Get Voucher By Customer ID"
                     },
                     "400": {
                         "description": "Bad request"
@@ -4207,7 +4358,7 @@
                         "application/json": {
                             "schema": {
                                 "properties": {
-                                    "status": {
+                                    "payment_status": {
                                         "type": "string",
                                         "example": "paid"
                                     }
@@ -4271,10 +4422,6 @@
                                         "type": "string",
                                         "example": "Boishakhi Card"
                                     },
-                                    "image": {
-                                        "type": "string",
-                                        "example": "filename"
-                                    },
                                     "price_value_for": {
                                         "type": "string",
                                         "example": "5000"
@@ -4294,6 +4441,10 @@
                                     "created_by": {
                                         "type": "integer",
                                         "example": 1
+                                    },
+                                    "image": {
+                                        "type": "string",
+                                        "format": "binary"
                                     }
                                 },
                                 "type": "object"
@@ -4366,10 +4517,6 @@
                                         "type": "string",
                                         "example": "Boishakhi Card"
                                     },
-                                    "image": {
-                                        "type": "string",
-                                        "example": "filename"
-                                    },
                                     "price_value_for": {
                                         "type": "string",
                                         "example": "5000"
@@ -4397,6 +4544,10 @@
                                     "deleted_by": {
                                         "type": "integer",
                                         "example": 2
+                                    },
+                                    "image": {
+                                        "type": "string",
+                                        "format": "binary"
                                     }
                                 },
                                 "type": "object"
